--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -12,10 +12,11 @@
     <meta name="og:title" content="Little Lemon"/>
     <meta name="og:description" content="Little Lemon restaurant website"/>
     <meta name="og:image" content="../src/icon_assets/Logo.svg"/>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="../src/index.css">
     <title>Little Lemon Restaurant</title>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
